--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@ and open the template in the editor.
         <table>
             <tr>
                 <td>
-                hola
+                    Función
+                </td>
+                <td>
+                    Operación
                 </td>
             </tr>
         </table>
