--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@ and open the template in the editor.
                     Operación
                 </td>
             </tr>
+            <tr>
+                <td>
+                    Función
+                </td>
+                <td>
+                    Operación
+                </td>
+            </tr>
         </table>
         
     </body>
