--- a/index.html
+++ b/index.html
@@ -22,12 +22,28 @@ and open the template in the editor.
             </tr>
             <tr>
                 <td>
-                    Función
+                    git init
                 </td>
                 <td>
-                    Operación
+                    empezar
                 </td>
             </tr>
+            <tr>
+                <td>
+                    git add
+                </td>
+                <td>
+                    preparar archivos
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    git status
+                </td>
+                <td>
+                    ver estado de archivos
+                </td>
+            </tr>            
         </table>
         
     </body>
