--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ and open the template in the editor.
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     </head>
     <body>
+        <a href="https://git-scm.com/"><img src="https://git-scm.com/images/logo@2x.png"/><a/>
         <div class="container">
             <h1>crear nuevo proyecto</h1>
             <table class="table table-bordered table-striped table-condensed table-dark table-hover table-responsive">
