--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@ and open the template in the editor.
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <a href="https://git-scm.com/"><img src="https://git-scm.com/images/logo@2x.png"/><a/>
+        <center/>
+            <a href="https://git-scm.com/">
+                 <img src="https://git-scm.com/images/logo@2x.png"/>
+            <a/>
+        <center/>   
         <div class="container">
             <h1>crear nuevo proyecto</h1>
             <table class="table table-bordered table-striped table-condensed table-dark table-hover table-responsive">
@@ -104,5 +108,8 @@ and open the template in the editor.
                 </tbody>
             </table>
         </div>
+        <a href="https://github.com/OscarGonzalez1987/practica_inicial/blob/master/LICENSE.md">
+            LICENCIA DE USO
+        <a/>
     </body>
 </html>
