--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@ and open the template in the editor.
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <center/>
+        <center>
             <a href="https://git-scm.com/">
                  <img src="https://git-scm.com/images/logo@2x.png"/>
             <a/>
-        <center/>   
+        </center>   
         <div class="container">
             <h1>crear nuevo proyecto</h1>
             <table class="table table-bordered table-striped table-condensed table-dark table-hover table-responsive">
@@ -111,5 +111,6 @@ and open the template in the editor.
         <a href="https://github.com/OscarGonzalez1987/practica_inicial/blob/master/LICENSE.md">
             LICENCIA DE USO
         <a/>
+        <br/><br/><br/><br/><br/>
     </body>
 </html>
