--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@ and open the template in the editor.
                 </tbody>
             </table>
         </div>
+        <br/><br/><br/>
         <a href="https://github.com/OscarGonzalez1987/practica_inicial/blob/master/LICENSE.md">
-            LICENCIA DE USO
+            Licencia: Creative Commons Legal Code
         <a/>
         <br/><br/><br/><br/><br/>
     </body>
