--- a/index.html
+++ b/index.html
@@ -109,9 +109,11 @@ and open the template in the editor.
             </table>
         </div>
         <br/><br/><br/>
+        <center>
         <a href="https://github.com/OscarGonzalez1987/practica_inicial/blob/master/LICENSE.md">
             Licencia: Creative Commons Legal Code
         <a/>
+        </center>
         <br/><br/><br/><br/><br/>
     </body>
 </html>
