--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ and open the template in the editor.
         <br/><br/><br/>
         <center>
         <a href="https://github.com/OscarGonzalez1987/practica_inicial/blob/master/LICENSE.md">
-            Licencia: Creative Commons Legal Code
+            Licencia: Creative Commons
         <a/>
         </center>
         <br/><br/><br/><br/><br/>
