--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@ and open the template in the editor.
         <a href="https://github.com/OscarGonzalez1987/practica_inicial/blob/master/LICENSE.md">
             Licencia: Creative Commons
         <a/>
+        <br/>
+        Oscar Gonzalez<br/>
+        Whatsapp 322-8858439<br/>
+        oigonzalez83@misena.edu.co<br/>
         </center>
         <br/><br/><br/><br/><br/>
     </body>
