--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ and open the template in the editor.
             Licencia: Creative Commons
         <a/>
         <br/>
-        Oscar Gonzalez<br/>
+        Óscar González<br/>
         Whatsapp 322-8858439<br/>
         oigonzalez83@misena.edu.co<br/>
         </center>
