--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ and open the template in the editor.
             <a href="https://git-scm.com/">
                 <img src="https://git-scm.com/images/logo@2x.png"/>
             <a/>
-        </center>   
+        </center><br/>  
         <div class="container">
             <h1>crear nuevo proyecto</h1>
             <table class="table table-bordered table-striped table-condensed table-dark table-hover table-responsive">
