--- a/index.html
+++ b/index.html
@@ -14,7 +14,28 @@ and open the template in the editor.
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     </head>
-    <body><br/><br/><br/><br/><br/>
+    <body>
+        <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://oscargonzalez1987.github.io/practica_inicial/">
+                            Marco guía
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+
+                        </a>
+                    </li>   
+                </ul>
+            </div>  
+        </nav>
+        <br/><br/><br/><br/><br/>
         <center>
             <a href="https://git-scm.com/">
                 <img src="https://git-scm.com/images/logo@2x.png"/>
