--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ and open the template in the editor.
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
-
+                        <a class="nav-link" href="https://github.com/OscarGonzalez1987/practica_inicial/blob/master/index.html">
+                            GitHub
                         </a>
                     </li>   
                 </ul>
