--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ and open the template in the editor.
     </head>
     <body>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">GitHub</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -28,7 +28,7 @@ and open the template in the editor.
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/OscarGonzalez1987/practica_inicial/blob/master/index.html">
+                        <a class="nav-link" href="https://github.com/OscarGonzalez1987">
                             GitHub
                         </a>
                     </li>   
