--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@ and open the template in the editor.
         <table class="table table-bordered table-striped table-condensed table-dark table-hover table-responsive">
             <tr>
                 <td>
-                    <a href="https://github.com/OscarGonzalez1987/practica_inicial/blob/master/LICENSE.md">
-                        Licencia: Creative Commons
-                    </a>
+                    <img src="https://raw.githubusercontent.com/OscarGonzalez1987/practica_inicial/master/captures/a1.png"/>
                 </td>
             </tr>
         </table>
