--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
+The Creative Commons CC0 Public Domain Dedication waives copyright interest in a
+work you've created and dedicates it to the world-wide public domain. Use CC0 to
+opt out of copyright entirely and ensure your work has the widest reach. As with
+the Unlicense and typical software licenses, CC0 disclaims warranties. CC0 is 
+very similar to the Unlicense.
+
+    Created on : 6/01/2020, 02:59:20 PM
+    Author     : oscar gonzalez
+    Email      : oigonzalez83@misena.edu.co
+
 -->
 <html>
     <head>
@@ -10,13 +17,17 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+        <link href="librerias/css/boton_whatsapp.css" rel="stylesheet" type="text/css"/>
+
+        <script src="librerias/js/jquery-3.4.1min.js" type="text/javascript"></script>
+        <script src="librerias/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="librerias/js/interactividad.js" type="text/javascript"></script>
     </head>
     <body>
-        <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-            <a class="navbar-brand" href="https://github.com/OscarGonzalez1987/practica_inicial">GitHub</a>
+        <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+            <a class="navbar-brand" href="https://github.com/OscarGonzalez1987/practica_inicial">
+                GitHub
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -30,120 +41,270 @@ and open the template in the editor.
                 </ul>
             </div>  
         </nav>
-        <br/><br/><br/><br/><br/>
-    <center>
-        <a href="https://git-scm.com/">
-            <img src="https://git-scm.com/images/logo@2x.png"/>
-            <a/>
-    </center>
-    <br/>  
-    <div class="container">
-        <h1>crear nuevo proyecto</h1>
-        <table class="table table-bordered table-striped table-condensed table-dark table-hover table-responsive">
-            <thead>
-                <tr>
-                    <th style="width: 100px"></th>
-                    <th style="width: 100px">comando</th>
-                    <th style="width: 100px">Para</th>
-                    <th style="width: 100px">qué sucede</th>
-                    <th style="width: 100px">Recomendaciones</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Paso 0</td>
-                    <td>git -- version</td>
-                    <td>Revisar que Git esté instalado.</td>
-                    <td>se abre una ventana de línea de comandos y se introduce la orden.</td>
-                </tr>
-            </tbody>   
-        </table>       
-        <table class="table table-bordered table-striped table-condensed table-dark table-hover table-responsive">
-            <tr>
-                <td>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <div class="container">
+            <div class="col-sm-4" style="float:left">
+                <a href="https://git-scm.com/">
+                    <img src="https://git-scm.com/images/logo@2x.png"/>
+                </a>
+            </div>
+            <div class="col-sm-4" style="float:left">
+                <p>En internet encontrarás mucha información acerca de GIT Y GITHUB,
+                    pero es muy difícil encontrar un marco de referencia, con el cual
+                    un aprendiz se pueda guiar de una manera práctica y didáctica 
+                    para aprender de una<br/> forma fácil y acelerada.</p>
+
+            </div>
+            <div class="col-sm-4" style="float:left;">
+                <p> Precisamente por ello, he diseñado este marco de referencia
+                    interactivo. La idea es crear material de calidad para compartir
+                    información útil en procesos de aprendizaje.</p>                   
+                <p>Para reporte de fallas, errores, sugerencia o proyecto
+                    escribir al whatsapp.</p>
+
+
+
+
+
+
+
+            </div>
+            <div id="boton_telefono" style="float:right;">          
+                <table class="table table-borderless" cellpadding="0" cellspacing="0">
+                    <tbody>
+                        <tr>
+                            <td id="boton_icono">
+                                <img src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iaXNvLTg4NTktMSI/Pgo8IURPQ1RZUEUgc3Zn%0D%0AIFBVQkxJQyAiLS8vVzNDLy9EVEQgU1ZHIDEuMS8vRU4iICJodHRwOi8vd3d3LnczLm9yZy9HcmFw%0D%0AaGljcy9TVkcvMS4xL0RURC9zdmcxMS5kdGQiPgo8c3ZnIHhtbG5zPSJodHRwOi8vd3d3LnczLm9y%0D%0AZy8yMDAwL3N2ZyIgeG1sbnM6eGxpbms9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkveGxpbmsiIHZl%0D%0AcnNpb249IjEuMSIgaWQ9IkNhcGFfMSIgeD0iMHB4IiB5PSIwcHgiIHdpZHRoPSI1MTJweCIgaGVp%0D%0AZ2h0PSI1MTJweCIgdmlld0JveD0iMCAwIDkwIDkwIiBzdHlsZT0iZW5hYmxlLWJhY2tncm91bmQ6%0D%0AbmV3IDAgMCA5MCA5MDsiIHhtbDpzcGFjZT0icHJlc2VydmUiPgo8Zz4KCTxwYXRoIGlkPSJXaGF0%0D%0Ac0FwcCIgZD0iTTkwLDQzLjg0MWMwLDI0LjIxMy0xOS43NzksNDMuODQxLTQ0LjE4Miw0My44NDFj%0D%0ALTcuNzQ3LDAtMTUuMDI1LTEuOTgtMjEuMzU3LTUuNDU1TDAsOTBsNy45NzUtMjMuNTIyICAgYy00%0D%0ALjAyMy02LjYwNi02LjM0LTE0LjM1NC02LjM0LTIyLjYzN0MxLjYzNSwxOS42MjgsMjEuNDE2LDAs%0D%0ANDUuODE4LDBDNzAuMjIzLDAsOTAsMTkuNjI4LDkwLDQzLjg0MXogTTQ1LjgxOCw2Ljk4MiAgIGMt%0D%0AMjAuNDg0LDAtMzcuMTQ2LDE2LjUzNS0zNy4xNDYsMzYuODU5YzAsOC4wNjUsMi42MjksMTUuNTM0%0D%0ALDcuMDc2LDIxLjYxTDExLjEwNyw3OS4xNGwxNC4yNzUtNC41MzcgICBjNS44NjUsMy44NTEsMTIu%0D%0AODkxLDYuMDk3LDIwLjQzNyw2LjA5N2MyMC40ODEsMCwzNy4xNDYtMTYuNTMzLDM3LjE0Ni0zNi44%0D%0ANTdTNjYuMzAxLDYuOTgyLDQ1LjgxOCw2Ljk4MnogTTY4LjEyOSw1My45MzggICBjLTAuMjczLTAu%0D%0ANDQ3LTAuOTk0LTAuNzE3LTIuMDc2LTEuMjU0Yy0xLjA4NC0wLjUzNy02LjQxLTMuMTM4LTcuNC0z%0D%0ALjQ5NWMtMC45OTMtMC4zNTgtMS43MTctMC41MzgtMi40MzgsMC41MzcgICBjLTAuNzIxLDEuMDc2%0D%0ALTIuNzk3LDMuNDk1LTMuNDMsNC4yMTJjLTAuNjMyLDAuNzE5LTEuMjYzLDAuODA5LTIuMzQ3LDAu%0D%0AMjcxYy0xLjA4Mi0wLjUzNy00LjU3MS0xLjY3My04LjcwOC01LjMzMyAgIGMtMy4yMTktMi44NDgt%0D%0ANS4zOTMtNi4zNjQtNi4wMjUtNy40NDFjLTAuNjMxLTEuMDc1LTAuMDY2LTEuNjU2LDAuNDc1LTIu%0D%0AMTkxYzAuNDg4LTAuNDgyLDEuMDg0LTEuMjU1LDEuNjI1LTEuODgyICAgYzAuNTQzLTAuNjI4LDAu%0D%0ANzIzLTEuMDc1LDEuMDgyLTEuNzkzYzAuMzYzLTAuNzE3LDAuMTgyLTEuMzQ0LTAuMDktMS44ODNj%0D%0ALTAuMjctMC41MzctMi40MzgtNS44MjUtMy4zNC03Ljk3NyAgIGMtMC45MDItMi4xNS0xLjgwMy0x%0D%0ALjc5Mi0yLjQzNi0xLjc5MmMtMC42MzEsMC0xLjM1NC0wLjA5LTIuMDc2LTAuMDljLTAuNzIyLDAt%0D%0AMS44OTYsMC4yNjktMi44ODksMS4zNDQgICBjLTAuOTkyLDEuMDc2LTMuNzg5LDMuNjc2LTMuNzg5%0D%0ALDguOTYzYzAsNS4yODgsMy44NzksMTAuMzk3LDQuNDIyLDExLjExM2MwLjU0MSwwLjcxNiw3LjQ5%0D%0ALDExLjkyLDE4LjUsMTYuMjIzICAgQzU4LjIsNjUuNzcxLDU4LjIsNjQuMzM2LDYwLjE4Niw2NC4x%0D%0ANTZjMS45ODQtMC4xNzksNi40MDYtMi41OTksNy4zMTItNS4xMDdDNjguMzk4LDU2LjUzNyw2OC4z%0D%0AOTgsNTQuMzg2LDY4LjEyOSw1My45Mzh6IiBmaWxsPSIjRkZGRkZGIi8+CjwvZz4KPC9zdmc+Cg=="
+                                     alt="Whatsapp"
+                                     title="Whatsapp">
+                            </td>
+
+                            <td id="boton_texto">
+                                <a id="boton_icono"
+                                   href="https://api.whatsapp.com/send?phone=573228858439&text=Hola%20Oscar,%20he%20visto%20tu%20perfil%20de%20Git%20Hub.">
+                                    Whatsapp
+                                </a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+
+
+
+
+
+
+
+
+            <table class="table table-bordered table-condensed table-dark table-hover table-responsive">
+                <thead>
+                    <tr>
+                        <th style="width: 100px"></th>
+                        <th style="width: 100px">comando</th>
+                        <th style="width: 100px">Para</th>
+                        <th style="width: 100px">qué sucede</th>
+                        <th style="width: 100px">Recomendaciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr id="a0a">
+                        <td>Paso 0</td>
+                        <td>git --version</td>
+                        <td>Revisar que Git esté instalado.</td>
+                        <td>se abre una ventana de línea de comandos y se introduce la orden.</td>
+                        <td></td>
+                    </tr>
+                    <tr id="a0b">
+                        <td colspan="5">
+                            <img src="https://raw.githubusercontent.com/OscarGonzalez1987/practica_inicial/master/captures/a1.png"/>
+                        </td>
+                    </tr>
+                    <!--///////////////////////////////////////////////////////////////////////////////////////////////////////-->            
+                    <tr id="a1a">
+                        <td>Paso 1</td>
+                        <td></td>
+                        <td>Crear la carpeta en el equipo llamada “git_adsi”</td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr id="a1b">
+                        <td colspan="5">
+                            <img src="https://raw.githubusercontent.com/OscarGonzalez1987/practica_inicial/master/captures/a1.png"/>
+                        </td>
+                    </tr>
+                    <!--///////////////////////////////////////////////////////////////////////////////////////////////////////-->
+                    <tr id="a2a">
+                        <td>Paso 2</td>
+                        <td>git init</td>
+                        <td>Empezar, estando ubicado en la carpeta a ser controlada.</td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr id="a2b">
+                        <td colspan="5">
+                            <img src="https://raw.githubusercontent.com/OscarGonzalez1987/practica_inicial/master/captures/a1.png"/>
+                        </td>
+                    </tr>
+                    <!--///////////////////////////////////////////////////////////////////////////////////////////////////////-->
+                    <tr id="a3a">
+                        <td>Paso 3</td>
+                        <td></td>
+                        <td>Crear archivo ejemplo “adsi.txt”.</td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <!--figura no existe  ///////////////////////////////////////-->
+                    <tr id="a4a">
+                        <td>Paso 4</td>
+                        <td>git add "nombre_del_archivo.ext"</td>
+                        <td>Añadir archivo a zona de trabajo.</td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+
+                    <tr>
+                        <td></td>
+                        <td>git add .</td>
+                        <td>Añadir todos los archivos al mismo tiempo.</td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+
+                    <tr id="a4b">
+                        <td colspan="5">
+                            <img src="https://raw.githubusercontent.com/OscarGonzalez1987/practica_inicial/master/captures/a1.png"/>
+                        </td>
+                    </tr>
+
+                    <tr id="a5a">
+                        <td>Paso 5</td>
+                        <td>git status</td>
+                        <td>Revisar el estado de los cambios pendientes.</td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+
+                    <tr id="a5b">
+                        <td colspan="5">
+                            <img src="https://raw.githubusercontent.com/OscarGonzalez1987/practica_inicial/master/captures/a1.png"/>
+                        </td>
+                    </tr>
+
+                    <tr id="a6a">
+                        <td>Paso 6</td>
+                        <td>git commit -m "mensaje"</td>
+                        <td>Confirmar los cambios.</td>
+                        <td></td>
+                        <td>Se recomienda volver a revisar el estado (git status)</td>
+                    </tr>
+
+                    <tr id="a6b">
+                        <td colspan="5">
+                            <img src="https://raw.githubusercontent.com/OscarGonzalez1987/practica_inicial/master/captures/a1.png"/>
+                        </td>
+                    </tr>
+
+                    <tr id="a7a">
+                        <td>paso 7</td>
+                        <td>git log</td>
+                        <td>revisar el historial de cambios</td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+
+                    <tr id="a7b">
+                        <td colspan="5">
+                            <img src="https://raw.githubusercontent.com/OscarGonzalez1987/practica_inicial/master/captures/a1.png"/>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>paso 8</td>
+                        <td></td>
+                        <td>realizar modificaciones al archivo inicial “adsi.txt” y volver a hacer el ejercicio desde el paso 3.</td>
+                        <td></td>
+                        <td>
+                            Se recomienda hacer este mismo ejercicio 10 veces seguidas.<br/><br/>
+                            Dejar en comentarios de commit:<br/><br/>
+                            <ul>
+                                <li>El número de la versión de la modificación.</li><br/>
+                                <li>y una frase describiendo el cambio, junto con un chiste o noticia de actualidad.</li><br/>
+                            </ul>
+                        </td>
+                    </tr>                
+
+                </tbody>
+            </table>
+
+
+
+
+
+
+
+
+
+
+
+            <div id="a8b">
+                <center>
                     <img src="https://raw.githubusercontent.com/OscarGonzalez1987/practica_inicial/master/captures/a1.png"/>
-                </td>
-            </tr>
-        </table>
-        <table class="table table-bordered table-striped table-condensed table-dark table-hover table-responsive">
-            </tbody>
-            <tr>
-                <td>Paso 1</td>
-                <td></td>
-                <td>Crear la carpeta en el equipo llamada “git_adsi”</td>
-            </tr>
-            <tr>
+                </center>
+                <br/>
+            </div>
 
-                <td>Paso 2</td>
-                <td>git init</td>
-                <td>Empezar, estando ubicado en la carpeta a ser controlada.</td>
-            </tr>               
-            <tr>
 
-                <td>Paso 3</td>
-                <td></td>
-                <td>Crear archivo ejemplo “adsi.txt”.</td>
-            </tr>                
-            <tr>
 
-                <td>Paso 4</td>
-                <td>git add "nombre_del_archivo.ext"</td>
-                <td>Añadir archivo a zona de trabajo.</td>
-            </tr> 
-            <tr>
 
-                <td></td>
-                <td>git add .</td>
-                <td>Añadir todos los archivos al mismo tiempo.</td>
-            </tr>
-            <tr>
-                <td>Paso 5</td>
-                <td>git status</td>
-                <td>Revisar el estado de los cambios pendientes.</td>
-            </tr>
-            <tr>
-                <td>Paso 6</td>
-                <td>git commit -m "mensaje"</td>
-                <td>Confirmar los cambios.</td>
-                <td></td>
-                <td>Se recomienda volver a revisar el estado (git status)</td>
-            </tr> 
-            <tr>
-                <td></td>
-                <td>git commit -m "version original"</td>
-            </tr>
-            <tr>
+            <div class="col-md-6" 
+                 style="font-size: 14px;
+                 line-height: 1.5;
+                 color: #24292e;
+                 box-sizing: border-box; float:left;"><br/><br/><hr/>
+                <p class="text-small text-gray mb-0 lh-condensed-ultra">
+                    OscarGonzalez1987/practica_inicial is licensed under the
+                </p>
+                <h3 class="mt-0 mb-2 h4">Creative Commons Zero v1.0 Universal</h3>
+                <p class="mb-0 text-gray text-small pr-2">
+                    The Creative Commons CC0 Public Domain Dedication waives 
+                    copyright interest in a work you've created and dedicates it
+                    to the world-wide public domain. Use CC0 to opt out of copyright
+                    entirely and ensure your work has the widest reach. As with 
+                    the Unlicense and typical software licenses, CC0 disclaims 
+                    warranties. CC0 is very similar to the Unlicense.</p>
+            </div>
 
-                <td>paso 7</td>
-                <td>git log</td>
-                <td>revisar el historial de cambios</td>
-            </tr>
-            <tr>
-                <td>paso 8</td>
-                <td></td>
-                <td>realizar modificaciones al archivo inicial “adsi.txt” y volver a hacer el ejercicio desde el paso 3.</td>
-                <td></td>
-                <td>
-                    Se recomienda hacer este mismo ejercicio 10 veces seguidas.<br/><br/>
-                    Dejar en comentarios de commit:<br/><br/>
-                    <ul>
-                        <li>El número de la versión de la modificación</li><br/>
-                        <li>y una frase describiendo el cambio, junto con un chiste o noticia de actualidad.</li><br/>
-                    </ul>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-    <br/><br/><hr/>
-    <center>
-        Óscar González<br/>
-        Whatsapp 322-8858439<br/>
-        oigonzalez83@misena.edu.co<br/>
-        <a href="https://github.com/OscarGonzalez1987/practica_inicial/blob/master/LICENSE.md">
-            Licencia: Creative Commons
-        </a>
-    </center>
-    <br/><br/><br/><br/><br/>
-</body>
+
+
+
+
+
+
+
+
+
+
+            <div class="col-md-4" 
+                 style="font-size: 14px;
+                 line-height: 1.5;
+                 color: #24292e;
+                 box-sizing: border-box; float:right; text-align:right"><br/><hr/>
+                <p class="text-small text-gray mb-0 lh-condensed-ultra" style="text-align:left">
+                <h3 style="text-align:left">Autor:</h3>
+                </p>
+                <h3 class="mt-0 mb-2 h4">Óscar González</h3>
+                oigonzalez83@misena.edu.co<br/>
+                Cúcuta - Colombia<br/>2020<br/>
+
+                <br/><br/>
+            </div>
+        </div>
+        <br/><br/><br/><br/><br/>
+
+    </body>
 </html>
