--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@ very similar to the Unlicense.
                     pero es muy difícil encontrar un marco de referencia, con el cual
                     un aprendiz se pueda guiar de una manera práctica y didáctica 
                     para aprender de una<br/> forma fácil y acelerada.</p>
-
             </div>
             <div class="col-sm-4" style="float:left;">
                 <p> Precisamente por ello, he diseñado este marco de referencia
@@ -64,13 +63,6 @@ very similar to the Unlicense.
                     información útil en procesos de aprendizaje.</p>                   
                 <p>Para reporte de fallas, errores, sugerencia o proyecto
                     escribir al whatsapp.</p>
-
-
-
-
-
-
-
             </div>
             <div id="boton_telefono" style="float:right;">          
                 <table class="table table-borderless" cellpadding="0" cellspacing="0">
@@ -92,15 +84,6 @@ very similar to the Unlicense.
                     </tbody>
                 </table>
             </div>
-
-
-
-
-
-
-
-
-
             <table class="table table-bordered table-condensed table-dark table-hover table-responsive">
                 <thead>
                     <tr>
@@ -240,27 +223,12 @@ very similar to the Unlicense.
 
                 </tbody>
             </table>
-
-
-
-
-
-
-
-
-
-
-
             <div id="a8b">
                 <center>
                     <img src="https://raw.githubusercontent.com/OscarGonzalez1987/practica_inicial/master/captures/a1.png"/>
                 </center>
                 <br/>
             </div>
-
-
-
-
             <div class="col-md-6" 
                  style="font-size: 14px;
                  line-height: 1.5;
@@ -278,33 +246,19 @@ very similar to the Unlicense.
                     the Unlicense and typical software licenses, CC0 disclaims 
                     warranties. CC0 is very similar to the Unlicense.</p>
             </div>
-
-
-
-
-
-
-
-
-
-
-
             <div class="col-md-4" 
                  style="font-size: 14px;
                  line-height: 1.5;
                  color: #24292e;
                  box-sizing: border-box; float:right; text-align:right"><br/><hr/>
                 <p class="text-small text-gray mb-0 lh-condensed-ultra" style="text-align:left">
-                <h3 style="text-align:left">Autor:</h3>
+                <h5 style="text-align:left">Autor:</h5>
                 </p>
                 <h3 class="mt-0 mb-2 h4">Óscar González</h3>
                 oigonzalez83@misena.edu.co<br/>
-                Cúcuta - Colombia<br/>2020<br/>
-
-                <br/><br/>
+                Cúcuta - Colombia<br/>2020<br/><br/><br/>
             </div>
         </div>
         <br/><br/><br/><br/><br/>
-
     </body>
 </html>
