--- a/index.html
+++ b/index.html
@@ -219,8 +219,7 @@ very similar to the Unlicense.
                                 <li>y una frase describiendo el cambio, junto con un chiste o noticia de actualidad.</li><br/>
                             </ul>
                         </td>
-                    </tr>                
-
+                    </tr>
                 </tbody>
             </table>
             <div id="a8b">
@@ -252,7 +251,7 @@ very similar to the Unlicense.
                  color: #24292e;
                  box-sizing: border-box; float:right; text-align:right"><br/><hr/>
                 <p class="text-small text-gray mb-0 lh-condensed-ultra" style="text-align:left">
-                <h5 style="text-align:left">Autor:</h5>
+                    Autor:
                 </p>
                 <h3 class="mt-0 mb-2 h4">Óscar González</h3>
                 oigonzalez83@misena.edu.co<br/>
